# youtube-studio-mcp

./: .env.example  .gitignore  OAUTH_GUIDE.md  README.md  pyproject.toml  start-mcp.sh
skills/youtube-streamings/: SKILL.md
src/: main.py  stdio_main.py
src/config/: settings.py
src/services/: oauth.py  youtube_client.py
src/utils/: token_store.py
